data/derived/comb/progs/unify/prog3747.ml.out
Characters 299-303:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type (int * int) list
